--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 
     <!-- Full Width Image Header -->
-    <header class="header-image">
+   <header>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -109,7 +109,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-    </header>
+</header>
 
     <!-- Page Content -->
     <div class="container">
