--- a/resources.html
+++ b/resources.html
@@ -163,7 +163,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Magnum Power Tactical 2015</p>
                 </div>
             </div>
         </footer>
