--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="index.html"><img src="image/logo.png" alt="Flower" style="width:100px;height:100px;"></a>
                 <a class="navbar-brand" href="index.html">主頁</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -178,7 +179,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                  <p>Copyright &copy; Magnum Power Tactical 2015</p>
                 </div>
             </div>
         </footer>
