--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="image/logo.png" alt="Flower"></a>
+                <a class="navbar-brand" href="index.html"><img src="image/logo.png"  class="img-thumbnail" alt="Flower"></a>
                 <a class="navbar-brand" href="index.html">主頁</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
